# deepgram-python-captions

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  example.py  main.py  pyproject.toml  requirements-dev.txt  setup.py
.github/: release-please-config.json
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  python-publish.yml  release.yml
deepgram_captions/: __init__.py  converters.py  helpers.py  srt.py  webvtt.py
test/: assemblyai_transcription.json  assemblyai_utterances.json  dg_speakers.json  dg_speakers_no_utterances.json  dg_transcription.json  dg_utterances.json  dg_whisper_transcription.json  example.py  test_assembly.py  test_deepgram.py  test_whisper.py  whisper_timestamped.json
