[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepgram-captions"
version = "2.0.0"
description = "Official Python library for generating WebVTT and SRT captions from Deepgram and other speech-to-text API responses"
readme = "README.md"
license = "MIT"
authors = [{ name = "Deepgram", email = "devrel@deepgram.com" }]
maintainers = [{ name = "Deepgram", email = "devrel@deepgram.com" }]
keywords = ["deepgram", "captions", "srt", "webvtt", "speech-to-text", "subtitles", "accessibility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.11.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://developers.deepgram.com"
Repository = "https://github.com/deepgram/deepgram-python-captions"
Issues = "https://github.com/deepgram/deepgram-python-captions/issues"
Changelog = "https://github.com/deepgram/deepgram-python-captions/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["deepgram_captions*"]

[tool.setuptools.package-data]
deepgram_captions = ["py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "E711", "E712", "E721", "E722", "E731", "F821", "F841"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
